tests-integration/fixtures/checking/078_inspect_arity_invalid/Main.snap
---
source: tests-integration/tests/checking/generated.rs
assertion_line: 28
expression: report
---
Terms
addWrong :: forall (a :: Type). BinaryOp (a :: Type)
composeWrong :: forall (a :: Type). ReturnUnary (a :: Type)
constWrong :: forall (a :: Type) (b :: Type). (a :: Type) -> (b :: Type) -> (a :: Type)

Types
BinaryOp :: Type -> Type
UnaryOp :: Type -> Type
ReturnUnary :: Type -> Type
Const :: Type

Synonyms
BinaryOp = forall (a :: Type). (a :: Type) -> (a :: Type) -> (a :: Type)
  Quantified = :0
  Kind = :0
  Type = :1

UnaryOp = forall (a :: Type). (a :: Type) -> (a :: Type)
  Quantified = :0
  Kind = :0
  Type = :1

ReturnUnary = forall (a :: Type). (a :: Type) -> UnaryOp (a :: Type)
  Quantified = :0
  Kind = :0
  Type = :1

Const = forall (a :: Type) (b :: Type). (a :: Type) -> (b :: Type) -> (a :: Type)
  Quantified = :0
  Kind = :0
  Type = :0


Diagnostics
error[TooManyBinders]: Too many binders: expected 2, got 3
  --> 7:1..7:33
  |
7 | addWrong :: forall a. BinaryOp a
  | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
error[TooManyBinders]: Too many binders: expected 2, got 3
  --> 13:1..13:40
   |
13 | composeWrong :: forall a. ReturnUnary a
   | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
error[TooManyBinders]: Too many binders: expected 2, got 3
  --> 18:1..18:20
   |
18 | constWrong :: Const
   | ^~~~~~~~~~~~~~~~~~~
